--- a/.config
+++ b/.config
@@ -6247,6 +6247,7 @@ CONFIG_MTK_THIRD_IF_NONE=y
 # CONFIG_MTK_THIRD_IF_MT7916 is not set
 CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
 CONFIG_MTK_MT_WIFI=m
+CONFIG_MTK_MT_WIFI_DRIVER_VERSION_7672=y
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
 
 #
@@ -6320,7 +6321,7 @@ CONFIG_MTK_RED_SUPPORT=y
 # CONFIG_MTK_FIRST_IF_EPAELNA is not set
 CONFIG_MTK_FIRST_IF_IPAILNA=y
 # CONFIG_MTK_FIRST_IF_IPAELNA is not set
-CONFIG_MTK_MT7981_NEW_FW=y
+# CONFIG_MTK_MT7981_NEW_FW=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
 # CONFIG_MTK_RLT_MAC is not set
 # CONFIG_MTK_RTMP_MAC is not set
